--- a/package.json
+++ b/package.json
@@ -1,32 +1,46 @@
 {
-  "name": "pixi-webpack-demo",
+  "name": "billiard",
   "version": "1.0.0",
-  "description": "make pixi.js game with webpack",
-  "main": "src/js/main.js",
+  "description": "",
   "keywords": [
-    "pixi.js",
+    "billiard",
     "webpack"
   ],
-  "author": "yulijun",
+  "type": "module",
+  "author": "Stevedoh",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --open 'google chrome' --config webpack.dev.js",
+    "start:server": "nodemon server.js",
+    "start:client": "cross-env NODE_ENV=development webpack-dev-server --config webpack.dev.cjs",
+    "start:all": "concurrently \"npm run start:server\" \"npm run start:client\"",
     "clean": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
+    "concurrently": "^6.2.0",
     "core-js": "^3.6.4",
-    "pixi.js": "^5.2.1"
+    "eiows": "^3.6.0",
+    "express": "^4.17.1",
+    "matter-js": "^0.17.1",
+    "nodemon": "^2.0.12",
+    "pixi.js": "^5.2.1",
+    "poly-decomp": "^0.3.0",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
+    "eslint": "^7.31.0",
+    "eslint-config-google": "^0.14.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "rimraf": "^3.0.2",
